packages/neos-ui/src/Containers/PrimaryToolbar/DimensionSwitcher/style.module.css
.dropDown {
    max-width: 320px;
    width: auto;
}

.dropDown__header {
    background-color: transparent;

    &:hover {
        color: var(--colors-PrimaryBlue);
    }
}

.dropDown__contents {
    width: fit-content;
    min-width: 100%;
    padding: 0 2px 2px 2px !important;
    background-color: var(--colors-ContrastDarker) !important;
    box-shadow: 0 5px 5px rgba(0, 0, 0, .2);
}

.dropDown__btnIcon {
    margin-right: .5em;
}

.dimensionCategory {
    background-color: var(--colors-ContrastDarkest);
    padding: var(--spacing-Full);
}

.dimensionSwitcherDropDown {
    min-width: fit-content;
}

.dimensionCategory + .dimensionCategory {
    padding-top: 0;
}

.cancelButton {
    margin-right: var(--spacing-Quarter) !important;
}

.dimensionLabel {
    padding-top: var(--spacing-Half);
    padding-bottom: var(--spacing-Quarter);
}

.buttonGroup {
    display: flex;
    padding: var(--spacing-Half);
}

.buttonGroup button {
    flex: 1 0 auto;
}

@media only screen and (max-width: 1024px) {
    .selectPresetLabel {
        display: none;
    }
}

.nonExistent {
    position: relative;
    background-image: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 12px, #323232 0, #323232 23px);
}
.nonExistent:after {
    content: '';
    position: absolute;
    height: 100%;
    width: 3px;
    top: 0px;
    left: 0px;
    background-color: var(--colors-Warn);
}
.disallowed {
    position: relative;
    background-color: #323232;
}
.disallowed:after {
    content: '';
    position: absolute;
    height: 100%;
    width: 3px;
    top: 0px;
    left: 0px;
    background-color: var(--colors-Error);
}

.selectPreset + .selectPreset {
    margin-left: var(--spacing-Half);
}

.singleDimensionDropdown {
    display: flex;
    align-items: center;

    .dimensionSwitcherDropDown {
        background: unset;
        min-width: fit-content;
    }

    .dimensionSwitcherDropDown div[role='button'] {
        padding: 5px 0 5px var(--spacing-Full);
    }
}

